[package]
name = "evzhT9H3NzNqZWL"
version = "0.0.1"
authors = []
documentation = "http://docs.rs/evzhT9H3NzNqZWL"
homepage = "https://github.com/serenity-rs/rust-websocket"
repository = "https://github.com/serenity-rs/rust-websocket.git"
license = "MIT"

[dependencies]
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
bitflags = "0.9"
rand = "0.3"
byteorder = "1.0"
sha1 = "0.2"
base64 = "0.6"
lazy_static = "0.2"
log = "0.3"
uuid = { version = "0.5", features = ["v4"] }
futures = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-io = { version = "^0.1.2", optional = true }
tokio-tls = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "^0.1.2", optional = true }

[dev-dependencies]
futures-cpupool = "0.1"

[features]
default = ["sync", "sync-ssl", "async", "async-ssl"]
sync = []
sync-ssl = ["native-tls", "sync"]
async = ["tokio-core", "tokio-io", "bytes", "futures"]
async-ssl = ["native-tls", "tokio-tls", "async"]
nightly = ["hyper/nightly"]
